resolve white space

--- a/src/components/section-seven/section-seven.styles.scss
+++ b/src/components/section-seven/section-seven.styles.scss
@@ -8,6 +8,7 @@ $primary-color: orangered;
 .section7 {
   background-color: $background-color;
   padding: 8rem 10%;
+  width: 100vw;
   h2 {
     text-align: center;
     color: $color-white;
